# Gen-AI-Projects

./: .gitignore  pyproject.toml
QA-and-RAG/: README.md
QA-and-RAG/notebooks/: 01-explore-datasets.ipynb  test.db
QA-and-RAG/src/: db_utils.py
QA_and_RAG/: README.md  __init__.py  app.py
QA_and_RAG/data/flat_files/: stored_data.db
QA_and_RAG/data/for_upload/: sample.csv
QA_and_RAG/data/vector_db_data/: music-sample-data.csv
QA_and_RAG/notebooks/: 00-test-llm-setup.ipynb  01-explore-datasets.ipynb  02-agent.ipynb  03-agent.ipynb  03-langsmith.ipynb  04-vector-db.ipynb  test.db
QA_and_RAG/src/: chatbot.py  db_utils.py
QA_and_RAG/src/utils/: chat_utils.py  utilities.py
config/: __init__.py  config.yaml  settings.py
